# robosheep

./: .cproject  .gitignore  .project  README.md
Debug/: makefile  objects.mk  robosheep
Debug/src/: OpenCVUtils.d  example.d  main.d  subdir.mk  virtualSheep.d
Robosheep/: Robosheep.sln
Robosheep/Robosheep/: Robosheep.vcxproj  Robosheep.vcxproj.filters
docu/: 2 or 3 Wheeled Development Platforms - RobotShop.URL  DFRobot 2WD Mobile Platform for Arduino - RobotShop.URL  How to Track your Robot with OpenCV - 17.desktop  Lynxmotion Aluminum 4WD1 Rover Kit - RobotShop.URL  Makeblock-Aluminum Robot Kit.URL  Microsoft Robotics Developer Studio.URL  Microsoft Robotics Studio and Lego Mindstorms NXT Coding4Fun Articles Channel 9.URL  Sketch-Verkabelung Pi-Stepper.fzz
gui/plain/: app.py
py-vision/: CountsPerSec.py  ImageAnalyser.py  MowerControler.py  MowerController.py  Planner.py  TrackedColorBlob.py  TrackedObject.py  Utils.py  VideoCamera.py  VideoShow.py  VirtualSheep.py  globals.py  gui.py  main.py  thread_demo.py
sketchbook/Motordriver/: BatteryPower.h  DualMC33926MotorShield.h  HTML.h  Motordriver.ino  NodeMCU.h  SheepState.h  WebServer.h  Wifi.h  compass.h  swagger.html  swagger_minified.html  test.html
src/: GUI.cpp  GUI.h  Garden.cpp  Garden.h  HTTPClient.cpp  HTTPClient.h  ImageAnalyser.cpp  ImageAnalyser.h  MainWindow.cpp  MainWindow.h  OpenCVUtils.cpp  OpenCVUtils.h  Planer.cpp  Planer.h  Stopwatch.cpp  Stopwatch.h  TrackedColorBlob.cpp  TrackedColorBlob.h  TrackedObject.cpp  TrackedObject.h  VideoCamera.cpp  VideoCamera.h  VirtualSheep.cpp  VirtualSheep.h  main.cpp  virtualSheep.cpp  virtualSheep.h
src-orig/: main.cpp
src-orig/actuators/: HTTPClient.cpp
src-orig/planning/: Garden.h  Planer.h
src-orig/sensors/: ImageAnalyser.cpp  ImageAnalyser.h  TrackedColorBlob.cpp  VideoCamera.cpp  VideoCamera.h
src-orig/utilities/: VirtualSheep.cpp
test/: testVideoCamera
vision/: CMakeLists.txt  Makefile  README.md
vision/openCV_make_examples/helloworld/: helloworld
vision/openCV_make_examples/simple_demo/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake
vision/src/: CMakeLists.txt  Makefile  main.cpp  workspace.code-workspace
vision/src/actuators/: CMakeLists.txt  HTTPClient.cpp
vision/src/planning/: CMakeLists.txt  Garden.cpp  Garden.h  Planer.cpp  Planer.h
vision/src/presentation/: CMakeLists.txt  GUI.cpp
vision/src/sensors/: CMakeLists.txt  ImageAnalyser.cpp  ImageAnalyser.h  TrackedColorBlob.cpp  TrackedColorBlob.h  TrackedObject.cpp  TrackedObject.h  VideoCamera.cpp  VideoCamera.h
vision/src/utilities/: CMakeLists.txt  OpenCVUtils.cpp  OpenCVUtils.h  Stopwatch.cpp  VirtualSheep.cpp  VirtualSheep.h
(+26 files in other folders)
